--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,11 @@
-title: "Welcome-to-my-blog"
+title: "Sidhant's webste"
 author: Sidhant Goyal
 email: sidmbbs@gmail.com
 theme: minima
 description: > # this means to ignore newlines until "baseurl:"
-  A diary of my thoughts
 
 # social links
 twitter_username: sid_1_0 # DO NOT include the @ character, or else the build will fail!
 github_username:  SidhantGoyal1994 # DO NOT include the @ character, or else the build will fail!
 
-show_excerpts: true # set to false to remove excerpts on the homepage
+show_excerpts: false # set to false to remove excerpts on the homepage
