--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "Sidhant's webste"
 author: Sidhant Goyal
 email: sidmbbs@gmail.com
-theme: jekyll-theme-minimal
+theme: jekyll-theme-slate
 description: > # this means to ignore newlines until "baseurl:"
 
 # social links
